# snapapi

./: .gitignore  Cargo.toml
migrations/2024-07-12-202604_users/: down.sql  up.sql
migrations/2024-07-14-082318_add_order/: down.sql  up.sql
src/: backend.rs  db.rs  main.rs  models.rs  schema.rs
