[package]
name = "ActixWebApi"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "*"
serde = {version = "*", features = ["derive"]}
diesel = { version = "*", features = ["sqlite", "postgres", "uuid", "chrono", "numeric"]}
dotenv = "*"
chrono = { version = "*", features = ["serde"] } 
bigdecimal = {version = "0.4"}
uuid = {version = "*", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
]}
serde_json = "1.0.120"

[dependencies.actix-rt]
version = "2.4.0"
